--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Mon Site</title>
+
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<h1>Le super nouveau site de l'école</h1>
