Add index.html ESGI description

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<h2>Informations de l'éole :</h2>
 		<ul>
 			<li>Nom: ESGI</li>
+			A 7000€ l'année, cette école vous proposera la meilleur annulation
+			de projet à la dernière minute de toute la France. Quel délice.
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
 			<li>Directeur: Kamal Sananes</li>
 			<li>Prof de git: Thomas Ecalle</li>
