Add index.html Kamal description

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
 			https://goo.gl/maps/DwMbPZcFn7jzUj6q9
 			<li>Directeur: Kamal Sananes</li>
+			Un homme très gentil
 			<li>Prof de git: Thomas Ecalle</li>
 		</ul>
 	</section>
