Add index.html git teacher description

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<li>Directeur: Kamal Sananes</li>
 			Un homme très gentil
 			<li>Prof de git: Thomas Ecalle</li>
+			Un homme très compétent
 		</ul>
 	</section>
 </body>
